Bug 26204 - [4.0 only] warnings in java front-end sources
Summary: [4.0 only] warnings in java front-end sources
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: java (show other bugs)
Version: 4.0.2
: P3 normal
Target Milestone: 4.0.3
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-10 00:02 UTC by Pierre
Modified: 2006-02-11 00:42 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-02-10 23:06:05


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre 2006-02-10 00:02:22 UTC
[...]
make[2]: Leaving directory `/tmp/gcc-4.0.2/build'
make[2]: Entering directory `/tmp/gcc-4.0.2/build/stage2-gcc'
/tmp/gcc-4.0.2/build/prev-gcc/xgcc -B/tmp/gcc-4.0.2/build/prev-gcc/ -B/usr/local/i686-pc-linux-gnu/bin/ -c   -O2 -g -fomit-frame-pointer -DIN_GCC   -W -Wall -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -pedantic -Wno-long-long -Wno-variadic-macros -Wold-style-definition -Werror    -DHAVE_CONFIG_H -I. -Ijava -I../../gcc -I../../gcc/java -I../../gcc/../include -I../../gcc/../libcpp/include     ../../gcc/java/jcf-write.c -o java/jcf-write.o
cc1: warnings being treated as errors
../../gcc/java/jcf-write.c: In function 'generate_bytecode_insns':
../../gcc/java/jcf-write.c:2236: warning: unused variable 'type'
make[2]: *** [java/jcf-write.o] Error 1
make[2]: Leaving directory `/tmp/gcc-4.0.2/build/stage2-gcc'
make[1]: *** [all-stage2-gcc] Error 2
make[1]: Leaving directory `/tmp/gcc-4.0.2/build'
make: *** [stage2-bubble] Error 2
Comment 1 Andrew Pinski 2006-02-10 00:05:39 UTC
What options did you pass to configure?

And yes this is a bug but it should not effect compiling with the default options.
Comment 2 Pierre 2006-02-10 23:04:04 UTC
../configure --enable-libada --enable-bootstrap --enable-shared --enable-threads --enable-tls --enable-nls --with-x --enable-java-awt=gtk,xlib --enable-gtk-cairo --enable-java-gc
Comment 3 Andrew Pinski 2006-02-10 23:06:05 UTC
--enable-bootstrap is not supported on 4.0.x or 4.1.x.

Can you try without that flag?

Anyways without that flag this is still an issue.
Comment 4 Tom Tromey 2006-02-11 00:41:13 UTC
Subject: Bug 26204

Author: tromey
Date: Sat Feb 11 00:41:08 2006
New Revision: 110866

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=110866
Log:
	PR java/26204:
	* jcf-write.c (generate_bytecode_insns): Removed unused variable.

Modified:
    branches/gcc-4_0-branch/gcc/java/ChangeLog
    branches/gcc-4_0-branch/gcc/java/jcf-write.c

Comment 5 Tom Tromey 2006-02-11 00:42:58 UTC
Fix checked in.