re PR java/26204 ([4.0 only] warnings in java front-end sources)

PR java/26204:
	* jcf-write.c (generate_bytecode_insns): Removed unused variable.

From-SVN: r110866