gcc/java/jcf-write.c
@@ -1,5 +1,5 @@
 /* Write out a Java(TM) class file.
-   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005
+   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006
    Free Software Foundation, Inc.
 
 This file is part of GCC.
@@ -2233,7 +2233,6 @@ generate_bytecode_insns (tree exp, int target, struct jcf_partial *state)
 	}
       else
 	{
-	  tree type = TREE_TYPE (exp);
 	  emit_load (arg, state);
 	}
       break;
